Fixed broken css

--- a/src/client/js/Widgets/DiagramDesigner/styles/DiagramDesignerWidget.css
+++ b/src/client/js/Widgets/DiagramDesigner/styles/DiagramDesignerWidget.css
@@ -177,3 +177,89 @@
       background-color: rgba(0, 255, 0, 0.1); }
     .diagram-designer .drop-region.reject-droppable {
       background-color: rgba(255, 0, 0, 0.1); }
+
+div.css-zoom.diagram-designer-zoom {
+  position: absolute;
+  top: 30px;
+  left: 10px; }
+
+.w-tabs div.css-zoom.diagram-designer-zoom {
+  top: 70px; }
+
+div.diagram-designer-drag-outline {
+  white-space: nowrap; }
+
+/* TABS CONTAINER */
+.active-panel .diagram-designer-tabs-container {
+  background-color: rgba(235, 235, 235, 0.2); }
+
+.diagram-designer-tabs-container {
+  position: absolute;
+  top: 3px;
+  width: 100%;
+  height: 26px;
+  background-color: rgba(248, 248, 248, 0.4);
+  padding-top: 1px; }
+  .diagram-designer-tabs-container > div {
+    display: table-cell;
+    vertical-align: middle;
+    white-space: nowrap; }
+  .diagram-designer-tabs-container div.add-tab-container {
+    border-bottom: 1px solid #ddd;
+    padding-left: 3px;
+    padding-right: 3px;
+    padding-bottom: 0; }
+  .diagram-designer-tabs-container div.add-tab-container > div {
+    display: inline-block;
+    margin-right: 3px; }
+  .diagram-designer-tabs-container div.add-tab-container ul.dropdown-menu li a [class^="icon-"],
+  .diagram-designer-tabs-container div.add-tab-container ul.dropdown-menu li a [class*=" icon-"] {
+    margin-left: -17px;
+    margin-right: 3px; }
+  .diagram-designer-tabs-container .btn {
+    padding: 0 12px; }
+  .diagram-designer-tabs-container div.tab-list-container {
+    width: 100%;
+    overflow: hidden; }
+    .diagram-designer-tabs-container div.tab-list-container ul.nav {
+      position: relative;
+      margin-bottom: 0px;
+      height: 24px; }
+      .diagram-designer-tabs-container div.tab-list-container ul.nav.nav-tabs > li {
+        display: inline-block;
+        float: none; }
+        .diagram-designer-tabs-container div.tab-list-container ul.nav.nav-tabs > li > a {
+          padding-top: 5px;
+          padding-bottom: 5px;
+          line-height: 13px; }
+          .diagram-designer-tabs-container div.tab-list-container ul.nav.nav-tabs > li > a .tab-title {
+            white-space: nowrap;
+            display: inline-block;
+            max-width: 120px;
+            overflow: hidden;
+            text-overflow: ellipsis; }
+            .diagram-designer-tabs-container div.tab-list-container ul.nav.nav-tabs > li > a .tab-title input {
+              min-width: 50px !important; }
+          .diagram-designer-tabs-container div.tab-list-container ul.nav.nav-tabs > li > a [class^="icon-"],
+          .diagram-designer-tabs-container div.tab-list-container ul.nav.nav-tabs > li > a [class*=" icon-"] {
+            margin-top: -2px;
+            margin-left: 2px;
+            cursor: pointer;
+            display: none; }
+        .diagram-designer-tabs-container div.tab-list-container ul.nav.nav-tabs > li.active > a [class^="icon-"],
+        .diagram-designer-tabs-container div.tab-list-container ul.nav.nav-tabs > li.active > a [class*=" icon-"] {
+          display: inline-block; }
+      .diagram-designer-tabs-container div.tab-list-container ul.nav.nav-tabs.ui-sortable li.ui-sortable-placeholder {
+        height: 0px !important; }
+      .diagram-designer-tabs-container div.tab-list-container ul.nav.nav-tabs.ui-sortable li.ui-sortable-helper {
+        top: 0px !important;
+        pointer-events: none; }
+
+.read-only .diagram-designer-tabs-container div.tab-list-container ul.nav.nav-tabs > li.active > a [class^="icon-"],
+.read-only .diagram-designer-tabs-container div.tab-list-container ul.nav.nav-tabs > li.active > a [class*=" icon-"] {
+  display: none; }
+
+.rotate-options {
+  top: -52px;
+  left: 16px;
+  display: none; }
